src/objects/Alexa_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Application_Id__c</fullName>
        <label>Application Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auth_Code_Grant__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Auth Code Grant</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Base_Url__c</fullName>
        <label>Base Url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Callback_Proxy_URL__c</fullName>
        <label>Callback Proxy URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Client_Id__c</fullName>
        <label>Client Id</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Secret__c</fullName>
        <label>Client Secret</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Enable_Debug__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Debug</label>
        <type>Checkbox</type>
    </fields>
    <label>Alexa Settings</label>
</CustomObject>